# PLC_Firmware

./: README.md
Basic GPIO Implementation/: Cargo.toml
Basic GPIO Implementation/src/: main.rs
Basic GPIO Implementation/templates/: index.html.tera
Basic Login and Dashboard html/: dashboard.html  loading.html  login.html  mobile.html  test.html
Basic Login and Dashboard html/gridplots/: box1.html  box2.html  box3.html
Benchmarking/: InputResponse.py  InputResponse.rs  Toggle.c  Toggle.py  Toggle.rs
Logic/: Cargo.toml  IOV.db
Logic/src/: IOV.db  connect_db.rs  hvac_system.rs  main.rs  simulation.rs
Server/: Cargo.toml
Server/db/: users.db  users_temp.db
Server/src/: main.rs
Server/templates/: api.html  dashboard.html  stats.html  viewcode.html
Software_based_plc/: Cargo.toml
Software_based_plc/db/: users.db
Software_based_plc/src/: main.rs
Software_based_plc/templates/: api.html  dashboard.html  dashboard_superseded.html  login.html  logout.html  stats.html
