[package]
name = "Software_based_plc"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rusqlite = "0.33.0"
bcrypt = "0.17.0"
time = "0.3.37"
chrono = "0.4.40"
sysinfo = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"